@startuml

title __BTCEXPLORER's Class Diagram__\n

  namespace  {
    class MavenWrapperDownloader {
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      class com.jxust.btcexplorer.BtcexplorerApplication {
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace controller {
        class com.jxust.btcexplorer.controller.BlockController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace controller {
        class com.jxust.btcexplorer.controller.IndexController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace entity {
        class com.jxust.btcexplorer.entity.BaseEntity {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace entity {
        class com.jxust.btcexplorer.entity.Bip {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace entity {
        class com.jxust.btcexplorer.entity.BipDetail {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace entity {
        class com.jxust.btcexplorer.entity.Block {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace entity {
        class com.jxust.btcexplorer.entity.BlockChainInfo {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace entity {
        class com.jxust.btcexplorer.entity.BlockInfo {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace entity {
        class com.jxust.btcexplorer.entity.ChainTips {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace entity {
        class com.jxust.btcexplorer.entity.Difficulty {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace entity {
        class com.jxust.btcexplorer.entity.MemPool {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace entity {
        class com.jxust.btcexplorer.entity.RPCInfo {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace entity {
        class com.jxust.btcexplorer.entity.Softforks {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace entity {
        class com.jxust.btcexplorer.entity.TapRoot {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace entity {
        class com.jxust.btcexplorer.entity.ValidateAddress {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace entity {
        class com.jxust.btcexplorer.entity.WalletInfo {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace httputils {
        class com.jxust.btcexplorer.httputils.HttpExecuteUtil {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace httputils {
        class com.jxust.btcexplorer.httputils.RPCRequest {
        }
      }
    }
  }
  

  namespace  {
    namespace om.jxust.btcexplorer {
      namespace service {
        class com.jxust.btcexplorer.service.BTCService {
        }
      }
    }
  }
  

  com.jxust.btcexplorer.controller.BlockController o-- com.jxust.btcexplorer.service.BTCService : service
  com.jxust.btcexplorer.entity.BaseEntity o-- T : result
  com.jxust.btcexplorer.entity.BlockChainInfo o-- com.jxust.btcexplorer.entity.Softforks : softforks
  com.jxust.btcexplorer.entity.BlockInfo o-- com.jxust.btcexplorer.entity.Block : result
  com.jxust.btcexplorer.entity.Softforks o-- com.jxust.btcexplorer.entity.Bip : bip34
  com.jxust.btcexplorer.entity.Softforks o-- com.jxust.btcexplorer.entity.Bip : bip65
  com.jxust.btcexplorer.entity.Softforks o-- com.jxust.btcexplorer.entity.Bip : bip66
  com.jxust.btcexplorer.entity.Softforks o-- com.jxust.btcexplorer.entity.Bip : csv
  com.jxust.btcexplorer.entity.Softforks o-- com.jxust.btcexplorer.entity.Bip : segwit
  com.jxust.btcexplorer.entity.Softforks o-- com.jxust.btcexplorer.entity.TapRoot : taproot
  com.jxust.btcexplorer.entity.TapRoot o-- com.jxust.btcexplorer.entity.BipDetail : bip9
  com.jxust.btcexplorer.entity.WalletInfo o-- com.jxust.btcexplorer.entity.WalletInfo : result


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
